--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
             <a href="./index.html" lang="en">WebStudio</a>
           </li>
           <li>
-            <a href="">Студия</a>
+            <a href="./index.html">Студия</a>
           </li>
           <li>
-            <a href="">Портфолио</a>
+            <a href="./portfolio.html">Портфолио</a>
           </li>
           <li>
             <a href="">Контакты</a>
