--- a/portfolio.html
+++ b/portfolio.html
@@ -6,5 +6,161 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Портфолио</title>
   </head>
-  <body></body>
+  <body>
+    <!-- Шапка страницы -->
+    <header>
+      <nav>
+        <!-- Навигация на другие страницы -->
+        <ul>
+          <li>
+            <a href="./index.html" lang="en">WebStudio</a>
+          </li>
+          <li>
+            <a href="./index.html">Студия</a>
+          </li>
+          <li>
+            <a href="./portfolio.html">Портфолио</a>
+          </li>
+          <li>
+            <a href="">Контакты</a>
+          </li>
+        </ul>
+      </nav>
+
+      <ul>
+        <!-- Контакты (почта и телефон) -->
+        <li>
+          <a href="mailto:info@devstudio.com" lang="en">info@devstudio.com</a>
+        </li>
+        <li>
+          <a href="tel:+380961111111">+38 096 111 11 11</a>
+        </li>
+      </ul>
+    </header>
+
+    <!-- Уникальный контент страницы -->
+    <main>
+      <section>
+        <!-- Секция Портфолио -->
+        <h1>Портфолио</h1>
+
+        <ul>
+          <li><button type="button">Все</button></li>
+          <li><button type="button">Веб-сайты</button></li>
+          <li><button type="button">Приложения</button></li>
+          <li><button type="button">Дизайн</button></li>
+          <li><button type="button">Маркетинг</button></li>
+        </ul>
+
+        <ul>
+          <li>
+            <a href="">
+              <img
+                src="./images/img-project-1.jpg"
+                alt="Технокряк"
+                width="370"
+              />
+              <h2>Технокряк</h2>
+              <p>Веб-сайт</p>
+            </a>
+
+            <a href="">
+              <img
+                src="./images/img-project-2.jpg"
+                alt="Постер New Orlean vs Golden Star"
+                width="370"
+              />
+              <h2>Постер New Orlean vs Golden Star</h2>
+              <p>Дизайн</p>
+            </a>
+
+            <a href="">
+              <img
+                src="./images/img-project-3.jpg"
+                alt="Ресторан Seafood"
+                width="370"
+              />
+              <h2>Ресторан Seafood</h2>
+              <p>Приложение</p>
+            </a>
+
+            <a href="">
+              <img
+                src="./images/img-project-4.jpg"
+                alt="Проект Prime"
+                width="370"
+              />
+              <h2>Проект Prime</h2>
+              <p>Маркетинг</p>
+            </a>
+
+            <a href="">
+              <img
+                src="./images/img-project-5.jpg"
+                alt="Проект Boxes"
+                width="370"
+              />
+              <h2>Проект Boxes</h2>
+              <p>Приложение</p>
+            </a>
+
+            <a href="">
+              <img
+                src="./images/img-project-6.jpg"
+                alt="Inspiration has no Borders"
+                width="370"
+              />
+              <h2>Inspiration has no Borders</h2>
+              <p>Веб-сайт</p>
+            </a>
+
+            <a href="">
+              <img
+                src="./images/img-project-7.jpg"
+                alt="Издание Limited Edition"
+                width="370"
+              />
+              <h2>Издание Limited Edition</h2>
+              <p>Дизайн</p>
+            </a>
+
+            <a href="">
+              <img
+                src="./images/img-project-8.jpg"
+                alt="Проект LAB"
+                width="370"
+              />
+              <h2>Проект LAB</h2>
+              <p>Маркетинг</p>
+            </a>
+
+            <a href="">
+              <img
+                src="./images/img-project-9.jpg"
+                alt="Growing Business"
+                width="370"
+              />
+              <h2>Growing Business</h2>
+              <p>Приложение</p>
+            </a>
+          </li>
+        </ul>
+      </section>
+    </main>
+
+    <!-- Подвал страницы -->
+    <footer>
+      <a href="./index.html" lang="en">WebStudio</a>
+      <address>г. Киев, пр-т Леси Украинки, 26</address>
+
+      <ul>
+        <li>
+          <a href="mailto:info@example.com" lang="en">info@example.com</a>
+        </li>
+        <li>
+          <a href="tel:+380991111111">+38 099 111 11 11</a>
+        </li>
+      </ul>
+    </footer>
+  </body>
 </html>
