--- a/index.html
+++ b/index.html
@@ -26,68 +26,72 @@
     <header>
       <nav>
         <!-- Навигация на другие страницы -->
-        <ul>
+        <ul class="main-nav list">
           <li>
-            <a href="./index.html" lang="en">WebStudio</a>
+            <a href="./index.html" class="logo" lang="en"
+              ><span class="colored-segment">Web</span>Studio</a
+            >
           </li>
           <li>
-            <a href="./index.html">Студия</a>
+            <a href="./index.html" class="link current">Студия</a>
           </li>
           <li>
-            <a href="./portfolio.html">Портфолио</a>
+            <a href="./portfolio.html" class="link">Портфолио</a>
           </li>
           <li>
-            <a href="">Контакты</a>
+            <a href="" class="link">Контакты</a>
           </li>
         </ul>
       </nav>
 
-      <ul>
+      <ul class="main-contacts list">
         <!-- Контакты (почта и телефон) -->
         <li>
-          <a href="mailto:info@devstudio.com" lang="en">info@devstudio.com</a>
+          <a href="mailto:info@devstudio.com" class="link" lang="en"
+            >info@devstudio.com</a
+          >
         </li>
         <li>
-          <a href="tel:+380961111111">+38 096 111 11 11</a>
+          <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
         </li>
       </ul>
     </header>
 
     <!-- Уникальный контент страницы -->
     <main>
-      <section>
+      <section class="hero">
         <!-- Секция Hero -->
-        <h1>Эффективные решения для вашего бизнеса</h1>
-        <button type="button">Заказать услугу</button>
+        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+        <button type="button" class="button primary">Заказать услугу</button>
       </section>
 
-      <section>
+      <section class="feature">
         <!-- Секция Особенности -->
-        <h2>Особенности</h2>
-        <ul>
+        <h2 class="section-title visually-hidden">Особенности</h2>
+        <ul class="list">
           <li>
-            <h3>Внимание к деталям</h3>
+            <h3 class="title">Внимание к деталям</h3>
             <p>
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
           <li>
-            <h3>Пунктуальность</h3>
+            <h3 class="title">Пунктуальность</h3>
             <p>
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
           <li>
-            <h3>Планирование</h3>
+            <h3 class="title">Планирование</h3>
             <p>
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
           <li>
-            <h3>Современные технологии</h3>
+            <h3 class="title">Современные технологии</h3>
             <p>
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
@@ -96,10 +100,10 @@
         </ul>
       </section>
 
-      <section>
+      <section class="section">
         <!-- Секция Чем мы занимаемся -->
-        <h2>Чем мы занимаемся</h2>
-        <ul>
+        <h2 class="section-title">Чем мы занимаемся</h2>
+        <ul class="list">
           <li>
             <img
               src="./images/img-typeofservice-1.jpg"
@@ -124,18 +128,18 @@
         </ul>
       </section>
 
-      <section>
+      <section class="team">
         <!-- Секция Наша команда -->
-        <h2>Наша команда</h2>
-        <ul>
+        <h2 class="section-title">Наша команда</h2>
+        <ul class="list">
           <li>
             <img
               src="./images/img-teamember-1.jpg"
               alt="Игорь Демьяненко"
               width="270"
             />
-            <h3>Игорь Демьяненко</h3>
-            <p>Product Designer</p>
+            <h3 class="title">Игорь Демьяненко</h3>
+            <p class="text">Product Designer</p>
           </li>
           <li>
             <img
@@ -143,8 +147,8 @@
               alt="Ольга Репина"
               width="270"
             />
-            <h3>Ольга Репина</h3>
-            <p>Frontend Developer</p>
+            <h3 class="title">Ольга Репина</h3>
+            <p class="text">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -152,8 +156,8 @@
               alt="Николай Тарасов"
               width="270"
             />
-            <h3>Николай Тарасов</h3>
-            <p>Marketing</p>
+            <h3 class="title">Николай Тарасов</h3>
+            <p class="text">Marketing</p>
           </li>
           <li>
             <img
@@ -161,24 +165,28 @@
               alt="Михаил Ермаков"
               width="270"
             />
-            <h3>Михаил Ермаков</h3>
-            <p>UI Designer</p>
+            <h3 class="title">Михаил Ермаков</h3>
+            <p class="text">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
 
     <!-- Подвал страницы -->
-    <footer>
-      <a href="./index.html" lang="en">WebStudio</a>
-      <address>г. Киев, пр-т Леси Украинки, 26</address>
+    <footer class="page-footer">
+      <a href="./index.html" class="logo colored" lang="en"
+        ><span class="colored-segment">Web</span>Studio</a
+      >
+      <address class="adds">г. Киев, пр-т Леси Украинки, 26</address>
 
-      <ul>
+      <ul class="contacts list">
         <li>
-          <a href="mailto:info@example.com" lang="en">info@example.com</a>
+          <a href="mailto:info@example.com" class="link" lang="en"
+            >info@example.com</a
+          >
         </li>
         <li>
-          <a href="tel:+380991111111">+38 099 111 11 11</a>
+          <a href="tel:+380991111111" class="link">+38 099 111 11 11</a>
         </li>
       </ul>
     </footer>
