--- a/portfolio.html
+++ b/portfolio.html
@@ -26,137 +26,149 @@
     <header>
       <nav>
         <!-- Навигация на другие страницы -->
-        <ul>
+        <ul class="main-nav list">
           <li>
-            <a href="./index.html" lang="en">WebStudio</a>
+            <a href="./index.html" class="logo" lang="en"
+              ><span class="colored-segment">Web</span>Studio</a
+            >
           </li>
           <li>
-            <a href="./index.html">Студия</a>
+            <a href="./index.html" class="link">Студия</a>
           </li>
           <li>
-            <a href="./portfolio.html">Портфолио</a>
+            <a href="./portfolio.html" class="link current">Портфолио</a>
           </li>
           <li>
-            <a href="">Контакты</a>
+            <a href="" class="link">Контакты</a>
           </li>
         </ul>
       </nav>
 
-      <ul>
+      <ul class="main-contacts list">
         <!-- Контакты (почта и телефон) -->
         <li>
-          <a href="mailto:info@devstudio.com" lang="en">info@devstudio.com</a>
+          <a href="mailto:info@devstudio.com" class="link" lang="en"
+            >info@devstudio.com</a
+          >
         </li>
         <li>
-          <a href="tel:+380961111111">+38 096 111 11 11</a>
+          <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
         </li>
       </ul>
     </header>
 
     <!-- Уникальный контент страницы -->
     <main>
-      <section>
+      <section class="portfolio">
         <!-- Секция Портфолио -->
-        <h1>Портфолио</h1>
-
-        <ul>
-          <li><button type="button">Все</button></li>
-          <li><button type="button">Веб-сайты</button></li>
-          <li><button type="button">Приложения</button></li>
-          <li><button type="button">Дизайн</button></li>
-          <li><button type="button">Маркетинг</button></li>
+        <h1 class="visually-hidden">Портфолио</h1>
+        <ul class="list">
+          <li>
+            <button autofocus type="button" class="button filter">Все</button>
+            <!-- current -->
+          </li>
+          <li>
+            <button type="button" class="button filter">Веб-сайты</button>
+          </li>
+          <li>
+            <button type="button" class="button filter">Приложения</button>
+          </li>
+          <li><button type="button" class="button filter">Дизайн</button></li>
+          <li>
+            <button type="button" class="button filter">Маркетинг</button>
+          </li>
         </ul>
 
-        <ul>
+        <ul class="list">
           <li>
-            <a href="">
+            <a href="" class="link">
               <img
                 src="./images/img-project-1.jpg"
                 alt="Технокряк"
                 width="370"
               />
-              <h2>Технокряк</h2>
-              <p>Веб-сайт</p>
+              <h2 class="title">Технокряк</h2>
+              <p class="text">Веб-сайт</p>
             </a>
 
-            <a href="">
+            <a href="" class="link">
               <img
                 src="./images/img-project-2.jpg"
                 alt="Постер New Orlean vs Golden Star"
                 width="370"
               />
-              <h2>Постер New Orlean vs Golden Star</h2>
-              <p>Дизайн</p>
+              <h2 class="title">Постер New Orlean vs Golden Star</h2>
+              <p class="text">Дизайн</p>
             </a>
 
-            <a href="">
+            <a href="" class="link">
               <img
                 src="./images/img-project-3.jpg"
                 alt="Ресторан Seafood"
                 width="370"
               />
-              <h2>Ресторан Seafood</h2>
-              <p>Приложение</p>
+              <h2 class="title">Ресторан Seafood</h2>
+              <p class="text">Приложение</p>
             </a>
 
-            <a href="">
+            <a href="" class="link">
               <img
                 src="./images/img-project-4.jpg"
                 alt="Проект Prime"
                 width="370"
               />
-              <h2>Проект Prime</h2>
-              <p>Маркетинг</p>
+              <h2 class="title">Проект Prime</h2>
+              <p class="text">Маркетинг</p>
             </a>
 
-            <a href="">
+            <a href="" class="link">
               <img
                 src="./images/img-project-5.jpg"
                 alt="Проект Boxes"
                 width="370"
               />
-              <h2>Проект Boxes</h2>
-              <p>Приложение</p>
+              <h2 class="title">Проект Boxes</h2>
+              <p class="text">Приложение</p>
             </a>
 
-            <a href="">
+            <a href="" class="link">
               <img
                 src="./images/img-project-6.jpg"
                 alt="Inspiration has no Borders"
                 width="370"
               />
-              <h2>Inspiration has no Borders</h2>
-              <p>Веб-сайт</p>
+              <h2 class="title">Inspiration has no Borders</h2>
+              <p class="text">Веб-сайт</p>
             </a>
 
-            <a href="">
+            <a href="" class="link">
               <img
                 src="./images/img-project-7.jpg"
                 alt="Издание Limited Edition"
                 width="370"
               />
-              <h2>Издание Limited Edition</h2>
-              <p>Дизайн</p>
+              <h2 class="title">Издание Limited Edition</h2>
+              <p class="text">Дизайн</p>
             </a>
 
-            <a href="">
+            <a href="" class="link">
               <img
                 src="./images/img-project-8.jpg"
                 alt="Проект LAB"
                 width="370"
               />
-              <h2>Проект LAB</h2>
-              <p>Маркетинг</p>
+              <h2 class="title">Проект LAB</h2>
+              <p class="text">Маркетинг</p>
             </a>
 
-            <a href="">
+            <a href="" class="link">
               <img
                 src="./images/img-project-9.jpg"
                 alt="Growing Business"
                 width="370"
               />
-              <h2>Growing Business</h2>
-              <p>Приложение</p>
+              <h2 class="title">Growing Business</h2>
+              <p class="text">Приложение</p>
             </a>
           </li>
         </ul>
@@ -164,16 +176,20 @@
     </main>
 
     <!-- Подвал страницы -->
-    <footer>
-      <a href="./index.html" lang="en">WebStudio</a>
-      <address>г. Киев, пр-т Леси Украинки, 26</address>
+    <footer class="page-footer">
+      <a href="./index.html" class="logo colored" lang="en"
+        ><span class="colored-segment">Web</span>Studio</a
+      >
+      <address class="adds">г. Киев, пр-т Леси Украинки, 26</address>
 
-      <ul>
+      <ul class="contacts list">
         <li>
-          <a href="mailto:info@example.com" lang="en">info@example.com</a>
+          <a href="mailto:info@example.com" class="link" lang="en"
+            >info@example.com</a
+          >
         </li>
         <li>
-          <a href="tel:+380991111111">+38 099 111 11 11</a>
+          <a href="tel:+380991111111" class="link">+38 099 111 11 11</a>
         </li>
       </ul>
     </footer>
