Изменяет разметку страницы Студия
Удаляет неиспользуемый класс section

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         </ul>
       </section>
 
-      <section class="section">
+      <section>
         <!-- Секция Чем мы занимаемся -->
         <h2 class="section-title">Чем мы занимаемся</h2>
         <ul class="list">
