--- a/portfolio.html
+++ b/portfolio.html
@@ -64,8 +64,9 @@
         <h1 class="visually-hidden">Портфолио</h1>
         <ul class="list">
           <li>
-            <button autofocus type="button" class="button filter">Все</button>
+            <!-- <button autofocus type="button" class="button filter">Все</button> -->
             <!-- current -->
+            <button type="button" class="button filter">Все</button>
           </li>
           <li>
             <button type="button" class="button filter">Веб-сайты</button>
